--- a/.dockerignore
+++ b/.dockerignore
@@ -16,5 +16,5 @@ package-lock.json
 .gitignore
 
 # Игнорируем любые другие локальные файлы, которые не должны попадать в образ
-*.env
+# *.env
 *.swp
