--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongo-project": "file:",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
+    "rotating-file-stream": "^3.2.6",
     "winston": "^3.17.0"
   }
 }
